# weather-bot

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
agent/: guardrail_agent.py  weather_agent.py
docs/database/: DATABASE_STRUCTURE_DOCUMENTATION.md
docs/deployment/: DEPLOYMENT_DOCUMENTATION.md
docs/design/: DESIGN_DOCUMENTATION.md
docs/testing/: TESTING_DOCUMENTATION.md
src/api/: auth.py
src/api/health/: __init__.py  health_route.py
src/api/v1/: __init__.py
src/api/v1/admin/: __init__.py  admin_routes.py
src/api/v1/cities/: __init__.py  cities_routes.py
src/api/v1/guardrail/: __init__.py  guardrail_routes.py
src/api/v1/orchestrator/: __init__.py  orchestrator_routes.py
src/api/v1/weather/: __init__.py  weather_routes.py
src/config/: __init__.py  config.py
src/exceptions/: __init__.py  base.py
src/exceptions/bigquery/: __init__.py  bigquery_service_error.py  data_insertion_error.py  query_execution_error.py  table_creation_error.py
src/exceptions/openai/: openai_key_error.py
src/exceptions/orchestration/: __init__.py  data_pipeline_error.py  orchestration_service_error.py  orchestrator_agent_error.py
src/exceptions/scheduler/: __init__.py  scheduler_error.py
src/exceptions/weather/: __init__.py  api_key_error.py  api_request_error.py  invalid_city_error.py  rate_limit_error.py  weather_service_error.py
src/models/admin/: __init__.py  manual_update_request.py  system_status_response.py
src/models/cities/: cities.py
src/models/guardrail/: guardrail_input.py  guardrail_output.py  guardrail_request.py  guardrail_response.py
src/models/orchestrator/: __init__.py  agent_response.py  query_request.py
src/models/weather/: weather.py
src/services/: bigquery_service.py  schedule_service.py  weather_service.py
src/utils/: logging_config.py  singleton.py  utils.py
tests/: conftest.py  test_guardrail_agent.py  test_weather_agent.py  test_weather_service.py
